--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{  
+{
   "name": "temp",
   "version": "0.1.0",
   "private": true,
@@ -46,6 +46,20 @@
   },
   "ct3aMetadata": {
     "initVersion": "7.37.0"
+  },
+  "overrides": {
+    "vulnerable-package": "version-with-fix",
+    "lodash": "^4.17.21",
+    "ajv": "^8.17.1",
+    "amqplib": "^0.10.4",
+    "body-parser": "^1.20.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
+    "path-to-regexp": "^8.2.0",
+    "qs": "^6.13.0",
+    "send": "^1.1.0",
+    "ws": "^8.18.0"
   },
   "packageManager": "npm@10.8.2"
 }
