--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@t3-oss/env-nextjs": "^0.10.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "firebase": "^11.0.1",
     "framer-motion": "^11.9.0",
     "geist": "^1.3.0",
     "lucide-react": "^0.441.0",
